app/css/main.css
html {
	min-height: 100%;
}

body {
	padding-top: 85px;
    padding-bottom: 25px;
	min-height: 100%;
}

h1 {
	text-align: center;
}

a:hover {
    cursor: pointer;
}

.fade-in {
    opacity: 0;
    -webkit-animation: fade-in 0.5s;
    -webkit-animation-fill-mode: forwards;
    animation: fade-in 0.5s;
    animation-fill-mode: forwards;
}

@-webkit-keyframes fade-in {
    100% { opacity: 1; }
}@keyframes fade {
    100% { opacity: 1; }
}

.fade-out {
    opacity: 1;
    -webkit-animation: fade-out 0.5s;
    -webkit-animation-fill-mode: forwards;
    animation: fade-out 0.5s;
    animation-fill-mode: forwards;
}

@-webkit-keyframes fade-out {
    100% { opacity: 0; }
}@keyframes fade-out {
    100% { opacity: 0; }
}

.hero-container {
    text-align: center;
}

#ow-bg {
	width: 100%;
    height: 100%;
    text-align: center;
    position: fixed;
    top: 0;
    opacity: .2;
    z-index: -100;
}

#ow-bg:before {
	content: url(../img/OW-bg-pattern.svg);
}

#account-icon {
    height: 40px;
    margin-right: 10px;
    margin-top: -15px;
    margin-bottom: -15px;
    border-radius: 6px;
}

#hero-grid {
    text-align: center;
}

#hero-list.dropdown-menu{
	min-width: 420px;
}

#hero-list.dropdown-menu>.dropdown-inline {
    display: inline-block;
    list-style-type: none;
    vertical-align: top;
    padding: 0;
}

#hero-list.dropdown-menu>.dropdown-inline>li {
    margin-left: 5px;
}

#hero-list.dropdown-menu>.dropdown-inline>li>a {
    display: block;
    padding: 3px 8px;
    clear: both;
    font-weight: 400;
    line-height: 1.42857143;
    /*color: #333;*/
    white-space: nowrap;
}

#hero-list.dropdown-menu>.dropdown-inline>li>a:hover {
    background-image: none;
    text-decoration: none;
}

#form-username {
    margin-top: 3%;
    text-align: center;
}

#modal-loading {
    top: 20%;
}

.dropdown-menu li a:hover {
    background-color: rgba(249, 158, 26, 0.9);
}


#hero-section-original {
    display: none;
}

#page-error {
    margin-top: 15%;
}

.dropdown-header {
    color: #a8a8a8;
}

.hero-icon {
	font-size: 120px;
	text-align: center;
	line-height: 1;
}

.hero-message {
    text-align: center;
}

.hero-message .glyphicon-alert {
    color: #f7615c;
    font-size: 3em;
    margin-bottom: 8px;
    -webkit-animation: jiggle 0.5s ease-in-out 2 alternate;
    -moz-animation: jiggle 0.5s ease-in-out 2 alternate;
    -o-animation: jiggle 0.5s ease-in-out 2 alternate;
    animation: jiggle 0.5s ease-in-out 2 alternate;
}

@-webkit-keyframes jiggle {
    100%   { -webkit-transform: scale(1.25); }
}@-moz-keyframes jiggle {
    100%   { -moz-transform: scale(1.25); }
}@-o-keyframes jiggle {
    100%   { -o-transform: scale(1.25); }
}@keyframes jiggle {
    100%   { transform: scale(1.25); }
}

.hero-remove {
    float: right;
    font-size: 1.2em;
    color: #f7615c;
    transition: all 0.1s ease;
}

.hero-remove::before {
    position: absolute;
    top: 0;
    right: 0;
    
}

.hero-remove:hover {
    font-size: 1.35em;
    color: red;
}

.hero-section {
	/*height: 590px;*/
    text-align: left;
    padding-bottom: 10px;
}

.hero-section>.panel {
    position: relative;
    height: 540px;
    padding: 10px;
}

.hero-section h5 {
    font-weight: 400;
    margin-top: 12px;
    margin-bottom: 2px;
}

.hero-stat-section {
    margin-bottom: 8px;
}

.hero-stat-section > .stat-bar {
    line-height: 1em;
}

.hero-link {
    position: absolute;
    bottom: 10px;
    left: 0;
    right: 0;
    margin-left: auto;
    margin-right: auto;
    max-width: 140px;
    display: block;
    text-align: center;
}

.hero-link:hover {
    text-decoration: none;
    background-color: white;
    transition: background-color, 0.4s, ease;
}

.stat-bar {
    color: #fff;
    padding: 4px;
    text-align: left;
    background-color: #f99e1a;
    -webkit-border-radius: 2px;
    -moz-border-radius: 2px;
    border-radius: 2px;
    width: 100%;

    -webkit-transition: width 1s ease-in-out;
    -moz-transition: width 1s ease-in-out;
    -o-transition: width 1s ease-in-out;
    transition: width 1s ease-in-out;
    -webkit-animation-name:stat-bar-anim;
    -webkit-animation-duration:2s;
    -webkit-animation-timing-function:ease-out;
}

.hero-stat-section:nth-child(even) .stat-bar {
    background-color: #405275;
}

@-webkit-keyframes stat-bar-anim {
0% { width:0%; }
}

.btn-group-toggle {
    margin: 20px;
}

.glyphicon.loading {
    font-size: 2.3em;
    animation: spin 1s infinite linear;
    -webkit-animation: spin2 1s infinite linear;
}

@keyframes spin {
    from { transform: scale(1) rotate(0deg);}
    to { transform: scale(1) rotate(360deg);}
}

@-webkit-keyframes spin2 {
    from { -webkit-transform: rotate(0deg);}
    to { -webkit-transform: rotate(360deg);}
}



/*=======================*/
/*BOOTSTRAP OVERRIDES START */
/*=======================*/

.panel-default {
    background-color: rgba(255, 255, 255, .5);
}

.jumbotron {
    background-color: rgba(255, 255, 255, .5);
}

.dropdown-inline.divider {
    position: absolute;
    top: 0;
    overflow: hidden;
    height: 90%;
    width: 1px;

}

.divider-vertical {
    height: 100%;
    border-left: 1px solid gray;     /* right or left is the same */
    float: left;                     /* so BS grid doesn't break */
    opacity: 0.5;                    /* optional */
}

.navbar-inverse {
    background-color: #29364D;
}

.navbar-brand>img {
    height: 100%;
    width: auto;
}

.navbar-brand {
    background-color: white;
}

.navbar-inverse .navbar-brand:hover, 
.navbar-inverse .navbar-brand:focus {
  background-color: rgba(249, 158, 26, 1);
}

.navbar-inverse .navbar-nav li a {
    font-weight: 700;
    color: #dddddd;
}

.navbar-nav .dropdown .dropdown-menu {
    background-color: #405275;
}

.btn:focus,.btn:active:focus,.btn.active:focus,
.btn.focus,.btn:active.focus,.btn.active.focus {
    outline: none;
}

/*btn-group dropdown overrides*/
.btn-group .dropdown-menu {
    padding: 0;
}

ul > li > label {
    width: 100%;
}
/* ... */

